# Library-Management-System

./: CMakeLists.txt  main.cpp
include/: addbookdialog.h  addclientdialog.h  book.h  bookdetaildialog.h  client.h  clientDetailDialog.h  clientviewdialog.h  dbManager.h  editclientdialog.h  familyviewdialog.h  library.h  mainWindow.h  newborrowdialog.h  windowManager.h
include/windows/: abstractWindow.h  addbookdialog.h  addclientdialog.h  bookdetaildialog.h  clientDetailDialog.h  editclientdialog.h  familyviewdialog.h  newborrowdialog.h
src/: addbookdialog.cpp  addclientdialog.cpp  book.cpp  bookdetaildialog.cpp  client.cpp  clientDetailDialog.cpp  clientviewdialog.cpp  dbManager.cpp  editclientdialog.cpp  familyviewdialog.cpp  library.cpp  mainWindow.cpp  newborrowdialog.cpp  windowManager.cpp
ui/: addbookdialog.ui  addclientdialog.ui  bookdetaildialog.ui  clientdetaildialog.ui  clientviewdialog.ui  editclientdialog.ui  familyviewdialog.ui  mainWindow.ui  newborrowdialog.ui
